z-index fix

--- a/public/css/reviews.css
+++ b/public/css/reviews.css
@@ -280,10 +280,6 @@
     height: 100%;
 }
 
-.btn-contact_form {
-    z-index: 100000 !important;
-}
-
 .gallery_wrapper {
     padding-top: 100px;
     padding-bottom: 45px;
